--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "firebase": "^10.12.0",
     "formik": "^2.4.6",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.23.1",
     "react-scrollspy": "^3.4.3",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
