--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "firebase": "^10.12.0",
     "formik": "^2.4.6",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scrollspy": "^3.4.3",
     "react-select": "^5.8.0",
+    "react-tippy": "^1.4.0",
     "react-toastify": "^10.0.5",
     "zod": "^3.23.8"
   },
